<resources>
    <string name="app_name">YourWallpaper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_history">my history</string>
    <string name="key_user_name" translatable="false">key_user_name</string>
    <string name="default_username">please register</string>

    <string name="key_userPhone" translatable="false">userPhone</string>
    <string name="key_partnerPhone" translatable="false">partnerPhone</string>
    <string name="key_nickname" translatable="false">nickname</string>
    <string name="key_phoneNumber" translatable="false">phoneNumber</string>
    <string name="key_partnerNumber" translatable="false">partnerNumber</string>
    <string name="key_isCouple" translatable="false">isCouple</string>
    <string name="key_preference_file" translatable="false">preference</string>
    <string name="key_isRegister" translatable="false">isRegister</string>
    <string name="key_isWaiting" translatable="false">isWaiting</string>
    <string name="key_user" translatable="false">userID</string>
    <string name="register_messege">Welcome! please input your information.</string>
    <string name="register_confirm">confirm</string>
    <string name="register_hint_nickname">please input nickname</string>
    <string name="register_hint_number">please input your number</string>
    <string name="register_hint_partner_number">please input opponent\'s number</string>
    <string name="waiting_title">Almost Done!</string>
    <string name="waiting_messege">You can start service when your opponent accepts invitation.</string>
    <string name="waiting_quick_tour">quick tour</string>
    <string name="main_history">history</string>
    <string name="main_partner_wallpaper">Partner Wallpaper</string>
    <string name="main_my_wallpaper">My Wallpaper</string>
    <string name="main_messege">No partner now!</string>
    <string name="main_send_picture">Send new picture</string>

</resources>
